# creative-suite

./: .gitignore  LICENSE  README.md  README2.md  build.ps1  claude.md  installer.iss  pyproject.toml  pytest.ini  requirements.txt  roadmap.md  temp_test_out.txt  目標説明.txt
.claude/: settings.local.json
.claude/docs/: ARCHITECTURE.md  DESIGN.md
.claude/skills/: magi.md
.github/workflows/: plugin-smoke-test.yml
app/core/: plugin_host.py  plugin_host_patch.txt  plugin_register_runner.py  policy_manager.py
app/ui/: main.py
apps/ai/: __init__.py  main.py  models.py  workers.py
apps/ai/services/: __init__.py  availability.py  base.py  hf_api_backend.py  local_backend.py
apps/common/: base_window.py  theme.py
apps/core/: config.py  logging.py
apps/vector/: __init__.py  canvas_scene.py  canvas_view.py  main.py  models.py  properties_panel.py  svg_io.py  tools.py
apps/video/: __init__.py  main.py  models.py  preview_widget.py  project_bin.py  timeline_widget.py  transport.py
cli/: sign.py
config/: policies.json
creative-suite-proto-with-plugin/creative-suite/: requirements.txt
creative-suite-store/: README.md  requirements.txt
docs/create_roadmap/: implementation_plan.md  task.md  walkthrough.md
docs/extract_common_components/: implementation_plan.md  task.md  walkthrough.md
docs/refactor_image_app_structure/: implementation_plan.md  task.md  walkthrough.md
docs/ui_implementation_and_unification/: implementation_plan.md  task.md  walkthrough.md
engine/imagemagick_wrapper/: __init__.py
engine/libbrush/: __init__.py
launcher/: main.py  qt.conf
plugins/: __init__.py
plugins/sample_plugin/: __init__.py  plugin.json  plugin.py
plugins/sample_plugin_ai/: __init__.py  plugin.json
server/app/: README_AUTH.md  auth.py  config.py  dashboard.py  main.py  models.py  plugins.py  security_scan.py  signing_utils.py  users_db.json
server/keys/: api_key.txt
tests/: conftest.py  test_ai_availability.py  test_ai_models.py  test_ai_studio_smoke.py  test_image_model.py  test_plugin_host.py  test_plugin_smoke.py  test_plugin_smoke_ci.py  test_svg_io.py  test_vector_editor_smoke.py  test_vector_models.py  test_video_editor_smoke.py  test_video_models.py
tools/: verify_suite.py
(+27 files in other folders)
