[project]
name = "creativestudio-proto"
version = "0.1.0"
description = "CreativeStudio prototype - minimal launcher and plugin scaffold"
authors = [
  { name="masahiro", email="masahiro@example.com" },
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
PySide6 = ">6.5"
pillow = ">=9.0"
numpy = ">=1.23"
fastapi = "^0.119.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
python-multipart = "^0.0.20"
cryptography = "^46.0.3"
pydantic = "^2.12.3"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
