[project]
name = "creativestudio-proto"
version = "0.5.0"
description = "CreativeStudio prototype - minimal launcher and plugin scaffold"
authors = [
  { name="masahiro", email="masahiro@example.com" },
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
PySide6 = ">6.5"
pillow = ">=9.0"
numpy = ">=1.23"
fastapi = "^0.119.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
python-multipart = "^0.0.20"
cryptography = "^46.0.3"
pydantic = "^2.12.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.1"
jinja2 = "^3.1.6"
aiofiles = "^25.1.0"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
